fixed z-index

--- a/main.css
+++ b/main.css
@@ -601,6 +601,9 @@ video {
 .z-10 {
   z-index: 10;
 }
+.z-40 {
+  z-index: 40;
+}
 .z-50 {
   z-index: 50;
 }
